--- a/proyecto-final-entrega-1/index.html
+++ b/proyecto-final-entrega-1/index.html
@@ -11,10 +11,161 @@
   <body>
     <div class="container">
       <div class="text-center">
-        <h1>[Nombre del Proyecto]</h1>
-        <p>Carla</p>
-        <p>Santiago</p>
-        <p>Aldo Turégano Montes - A01373335</p>
+        <br>
+        <h1>¡Conoce a los Pelifrutis!</h1>
+        <br>
+        <hr>
+        <br>
+        <div class="row">
+          <div class="col-md-8 offset-md-4">
+            <table>
+          <thead>
+            <tr>
+              <th>Integrante</th>
+              <th>Foto</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Carla</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Santiago</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Aldo Turégano Montes (<a href="https://www.linkedin.com/in/aldo-tur%C3%A9gano-montes-224952112/" target="_blank">LinkedIn</a> - <a href="https://github.com/AldoTu" target="_blank">GitHub</a>)</td>
+              <td><img alt="Foto Aldo"></td>
+            </tr>
+          </tbody>
+        </table>
+          </div>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="row">
+          <div class="col-md-4 offset-md-4">
+            <table>
+          <thead>
+            <tr>
+              <th>Carla</th>
+              <th>Santiago</th>
+              <th>Aldo</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td></td>
+              <td></td>
+              <td>Lealtad</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td>Pensamiento Crítico</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td>Compromiso</td>
+            </tr>
+          </tbody>
+        </table>
+          </div>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="row">
+          <div class="col-md-6">
+            <h1>Definición del Tema:</h1>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-4 offset-md-4">
+            <p class="text-justify">Según un artículo del sitio web “GuíaInfantil” publicado en el 2019 por la psicopedagoga María José Roldán, los niños entre 2 y 4 años pasan por una etapa de extremo egoísmo y egocentrismo derivado de la incapacidad de comprender el mundo que los rodea llevándolos a adoptar un comportamiento a veces violento con rabietas y llanto. (Roldán, 2019) Es por esto que decidimos centrar nuestra problemática al tema de la inclusión.</p>
+          </div>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="row">
+          <div class="col-md-8">
+            <h1>Investigación de la Problemática:</h1>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-6 offset-md-3 text-justify">
+            <ul>
+              <li>
+                <b>What: </b>El egocentrismo, según la página de internet “definicion.de”, se entiende como la tendencia al ser humano de centrarse en su propio ego (o comúnmente denominado el “yo”) lo cual supone una exagerada exaltación de la personalidad propia y por ende que el sujeto centre su personalidad o su persona como el centro de atención (N/A, 2013)
+              </li>
+              <br>
+              <li>
+                <b>Who: (Santiago)</b>
+              </li>
+              <br>
+              <li>
+                <b>Where: (Carly)</b>
+              </li>
+              <br>
+              <li>
+                <b>Why: </b>Vivimos en un mundo en constante cambio y en creciente intercomunicación, en el que cada vez hay más diversidad social e ideológica y donde la interacción con “otros” es inevitable, por lo que el egocentrismo resulta ser una barrera para el desarrollo personal y social. Si le enseñamos a niños y niñas desde una edad temprana a cohabitar con aquellos que son diferentes, aceptarlos e incluirlos, podremos combatir la discriminación y los conflictos futuros causados por el egocentrismo, que deriva de la intolerancia y exclusión. Weidenfeld (2002, p.101) asegura que la tolerancia es posible de enseñar y resalta que se deben desarrollar métodos para hacerlo. Por eso es vital inducir conductas inclusivas y tolerantes en los niños a partir de un medio cercano y comprensible para su edad: los juegos.
+              </li>
+              <br>
+              <li>
+                <b>When: </b>Esta problemática será abordada en un lapso entre el 2015 a la fecha (2020) debido a que como lo asegura la página web (Web del Maestro CMF), el uso excesivo del teléfono celular en niños pequeños forza al cerebro a una sobrestimulación provocando un incremento en la irritabilidad de ellos junto con otros factores negativos.
+              </li>
+              <br>
+              <li>
+                <b>How: (Santiago)</b>
+              </li>
+              <br>
+            </ul>
+          </div>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <div class="row">
+          <div class="col-md-6">
+            <h1>Referencias:</h1>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-7 offset-md-2 text-justify">
+            <ul>
+              <li>
+                Weidenfeld, Werner (2002), "Constructive Conflicts: Tolerance Learning as the basis for democracy", Prospects, núm. 1, vol. 32, marzo 2002, The International Bureau of Education of the United Nations Educational, Scientific and Cultural Organization, Kluwer Academic Publishers B.V.
+              </li>
+              <br>
+              <li>
+                N/A. (2020). Enfermedades que los celulares provocan a los niños y los padres desconocen. 02/07/2020, de Web del Maestro CMF Sitio web: https://webdelmaestrocmf.com/portal/alerta-padres-estas-son-las-enfermedades-que-celulares-provocan-a-los-ninos-y-no-lo-sabes/
+              </li>
+              <br>
+              <li>
+                N/A. (2013). DEFINICIÓN DE EGOCENTRISMO. 02/07/2020, de Definicion.de Sitio web: https://definicion.de/egocentrismo/
+              </li>
+              <br>
+              <li>
+                Roldán, M.J., (2019). La etapa del egocentrismo en los niños. 02/07/2020, de GuíaInfantil Sitio web: https://www.guiainfantil.com/articulos/educacion/conducta/la-etapa-del-egocentrismo-en-los-ninos/
+              </li>
+              <br>
+              <li>
+                [Referencias...]
+              </li>
+              <br>
+            </ul>
+          </div>
+        </div>
+        <br>
+        <hr>
+        <br>
       </div>
     </div>
     <!-- Optional JavaScript -->
