Updated information, slightly modified design

--- a/proyecto-final-entrega-1/index.html
+++ b/proyecto-final-entrega-1/index.html
@@ -7,10 +7,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Proyecto Final - Entrega 1</title>
+    <style>
+      .fixed {  }
+    </style>
   </head>
   <body>
     <div class="container">
       <div class="text-center">
+        <br>
+        <img src="https://static.wixstatic.com/media/42aa29_ddbd613073b74bf0a742f4eb8ec35918~mv2.png/v1/crop/x_0,y_0,w_1142,h_1118/fill/w_238,h_230,al_c,q_85,usm_0.66_1.00_0.01/logo%20con%20marca%20original.webp" alt="Logo de Pelifrutis">
+        <br>
         <br>
         <h1>¡Conoce a los Pelifrutis!</h1>
         <br>
@@ -18,7 +24,7 @@
         <br>
         <div class="row">
           <div class="col-md-8 offset-md-4">
-            <table>
+            <table class="fixed">
           <thead>
             <tr>
               <th>Integrante</th>
@@ -31,11 +37,11 @@
               <td></td>
             </tr>
             <tr>
-              <td>Santiago</td>
-              <td></td>
+              <td style="padding-right:10px">Santiago Alcérreca De la Viña <br>(<a href="https://github.com/santiadlv" target="_blank">GitHub</a>)</td>
+              <td><img style="width:150px;height:150px;padding-left:10px": src="./santi-photo.jpg" alt="Foto Santiago"></td>
             </tr>
             <tr>
-              <td>Aldo Turégano Montes (<a href="https://www.linkedin.com/in/aldo-tur%C3%A9gano-montes-224952112/" target="_blank">LinkedIn</a> - <a href="https://github.com/AldoTu" target="_blank">GitHub</a>)</td>
+              <td>Aldo Turégano Montes <br>(<a href="https://www.linkedin.com/in/aldo-tur%C3%A9gano-montes-224952112/" target="_blank">LinkedIn</a> - <a href="https://github.com/AldoTu" target="_blank">GitHub</a>)</td>
               <td><img alt="Foto Aldo"></td>
             </tr>
           </tbody>
@@ -46,8 +52,17 @@
         <hr>
         <br>
         <div class="row">
+          <div class="col-md-12">
+            <h1>Fortalezas</h1>
+          </div>
+        </div>
+        <br>
+        <div class="row">
           <div class="col-md-4 offset-md-4">
-            <table>
+            <table class="fixed">
+              <col width="300px">
+              <col width="300px">
+              <col width="300px">
           <thead>
             <tr>
               <th>Carla</th>
@@ -57,19 +72,23 @@
           </thead>
           <tbody>
             <tr>
-              <td></td>
-              <td></td>
+              <td>Experiencia en diseño gráfico</td>
+              <td>Curiosidad</td>
               <td>Lealtad</td>
             </tr>
             <tr>
-              <td></td>
-              <td></td>
+              <td>Creatividad</td>
+              <td>Perseverancia</td>
               <td>Pensamiento Crítico</td>
             </tr>
             <tr>
-              <td></td>
-              <td></td>
+              <td>Entrega y compromiso</td>
+              <td>Comunicación efectiva</td>
               <td>Compromiso</td>
+            </tr>
+            <tr>
+              <td>Capacidad crítica</td>
+              <td>Honestidad</td>
             </tr>
           </tbody>
         </table>
@@ -85,7 +104,7 @@
         </div>
         <br>
         <div class="row">
-          <div class="col-md-4 offset-md-4">
+          <div class="col-md-10 offset-md-1">
             <p class="text-justify">Según un artículo del sitio web “GuíaInfantil” publicado en el 2019 por la psicopedagoga María José Roldán, los niños entre 2 y 4 años pasan por una etapa de extremo egoísmo y egocentrismo derivado de la incapacidad de comprender el mundo que los rodea llevándolos a adoptar un comportamiento a veces violento con rabietas y llanto. (Roldán, 2019) Es por esto que decidimos centrar nuestra problemática al tema de la inclusión.</p>
           </div>
         </div>
@@ -99,14 +118,15 @@
         </div>
         <br>
         <div class="row">
-          <div class="col-md-6 offset-md-3 text-justify">
+          <div class="col-md-10 offset-md-1 text-justify">
             <ul>
               <li>
-                <b>What: </b>El egocentrismo, según la página de internet “definicion.de”, se entiende como la tendencia al ser humano de centrarse en su propio ego (o comúnmente denominado el “yo”) lo cual supone una exagerada exaltación de la personalidad propia y por ende que el sujeto centre su personalidad o su persona como el centro de atención (N/A, 2013)
+                <b>What: </b>El egocentrismo, según la página de internet “definicion.de”, se entiende como la tendencia al ser humano de centrarse en su propio ego (o comúnmente denominado el “yo”) lo cual supone una exagerada exaltación de la personalidad propia y por ende que el sujeto centre su personalidad o su persona como el centro de atención (N/A, 2013).
               </li>
               <br>
               <li>
-                <b>Who: (Santiago)</b>
+                <b>Who: </b>Aunque el problema del egocentrismo (que en sí genera otros problemas como la discriminación y la falta de inclusión) está presente en personas de todas las edades, queremos centrarnos específicamente en niños y niñas de México.
+                Esto debido a que ellos tienen una capacidad de aprendizaje impresionante, que obtienen a través de la experimentación intuitiva, un proceso muy parecido a los razonamientos científicos (Cook, Goodman & Schulz, 2011). Además, está comprobado que el ambiente escolar es el contexto ideal para desarrollar relaciones con personas distintas a nosotros mediante el respeto, la tolerancia y la empatía, creando así un entorno con diversidad (Mosquera, 2018).
               </li>
               <br>
               <li>
@@ -122,9 +142,8 @@
               </li>
               <br>
               <li>
-                <b>How: (Santiago)</b>
+                <b>How: </b>Uno de los problemas más graves que ha existido en nuestro país desde hace décadas o siglos ha sido la discriminación hacia personas diferentes a uno mismo. Ya sea por edad, sexo, religión, contexto socioeconómico, raza, color de piel o nacionalidad, esta falta de tolerancia e inclusión desmantelan la idea de poder fomentar una sociedad diversa y de sana convivencia (Soberanes, 2010). La situación se traduce posteriormente al condicionamiento del acceso a la educación, la salud y la vivienda de calidad, sin mencionar las oportunidades de empleo, bienestar social e ingreso económico que podrían llegar a tener (De María y Campos, 2018). Es lamentable que nuestra sociedad se encuentre en este estado en donde las diferencias se acentúan, en lugar de encontrar nuestros rasgos comunes. Es por esto que queremos afrontar el problema al inculcarle la importancia de la diversidad a niños de corta edad, y lograr que la tolerancia sea realmente practicada en México, y no sólo referida (Frías, 2019).
               </li>
-              <br>
             </ul>
           </div>
         </div>
@@ -138,26 +157,59 @@
         </div>
         <br>
         <div class="row">
-          <div class="col-md-7 offset-md-2 text-justify">
+          <div class="col-md-8 offset-md-2 text-justify">
             <ul>
               <li>
                 Weidenfeld, Werner (2002), "Constructive Conflicts: Tolerance Learning as the basis for democracy", Prospects, núm. 1, vol. 32, marzo 2002, The International Bureau of Education of the United Nations Educational, Scientific and Cultural Organization, Kluwer Academic Publishers B.V.
               </li>
               <br>
               <li>
-                N/A. (2020). Enfermedades que los celulares provocan a los niños y los padres desconocen. 02/07/2020, de Web del Maestro CMF Sitio web: https://webdelmaestrocmf.com/portal/alerta-padres-estas-son-las-enfermedades-que-celulares-provocan-a-los-ninos-y-no-lo-sabes/
+                N/A. (2020). Enfermedades que los celulares provocan a los niños y los padres desconocen. 02/07/2020, de Web del Maestro CMF. Sitio web:
+                <a href="https://webdelmaestrocmf.com/portal/alerta-padres-estas-son-las-enfermedades-que-celulares-provocan-a-los-ninos-y-no-lo-sabes/">https://webdelmaestrocmf.com/portal/alerta-padres-estas-son-las-enfermedades-que-celulares-provocan-a-los-ninos-y-no-lo-sabes/</a>
               </li>
               <br>
               <li>
-                N/A. (2013). DEFINICIÓN DE EGOCENTRISMO. 02/07/2020, de Definicion.de Sitio web: https://definicion.de/egocentrismo/
+                N/A. (2013). DEFINICIÓN DE EGOCENTRISMO. 02/07/2020, de Definicion.de Sitio web:
+                <a href="https://definicion.de/egocentrismo/">https://definicion.de/egocentrismo/</a>
               </li>
               <br>
               <li>
-                Roldán, M.J., (2019). La etapa del egocentrismo en los niños. 02/07/2020, de GuíaInfantil Sitio web: https://www.guiainfantil.com/articulos/educacion/conducta/la-etapa-del-egocentrismo-en-los-ninos/
+                Roldán, M.J. (2019). La etapa del egocentrismo en los niños. 02/07/2020, de GuíaInfantil Sitio web:
+                <a href="https://www.guiainfantil.com/articulos/educacion/conducta/la-etapa-del-egocentrismo-en-los-ninos/">https://www.guiainfantil.com/articulos/educacion/conducta/la-etapa-del-egocentrismo-en-los-ninos/</a>
               </li>
               <br>
               <li>
-                [Referencias...]
+                Nuevo, M. (2016). La capacidad de aprendizaje de los niños. Recuperado el 3 de julio de 2020, de GuíaInfantil. Sitio web:
+                <a href="https://www.guiainfantil.com/blog/educacion/inteligencia/la-capacidad-de-aprendizaje-de-los-ninos/">https://www.guiainfantil.com/blog/educacion/inteligencia/la-capacidad-de-aprendizaje-de-los-ninos/</a>
+              </li>
+              <br>
+              <li>
+                Mosquera, I. (2018). La inclusión en el aula y el valor de la amistad: un tándem ganador. Recuperado el 3 de julio de 2020 de la Revista de la Universidad Internacional de la Rioja. Sitio web:
+                <a href="https://www.unir.net/educacion/revista/noticias/la-inclusion-en-el-aula-y-el-valor-de-la-amistad-un-tandem-ganador/549203631434/">https://www.unir.net/educacion/revista/noticias/la-inclusion-en-el-aula-y-el-valor-de-la-amistad-un-tandem-ganador/549203631434/</a>
+              </li>
+              <br>
+              <li>
+                McIvor, C. (2011). Learning by experiment is all in a day’s play. Recuperado el 3 de julio de 2020 de Nature International Weekly Journal of Science. Sitio web:
+                <a href="https://www.nature.com/news/2011/110726/full/news.2011.442.html">https://www.nature.com/news/2011/110726/full/news.2011.442.html</a>
+              </li>
+              <br>
+              <li>
+                De María y Campos, M. (2018). Los desafíos de la discriminación y la inclusión en México - Jóvenes y adultos mayores. Recuperado el 3 de julio de 2020 de El Financiero. Sitio web:
+                <a href="https://www.elfinanciero.com.mx/opinion/mauricio-de-maria-y-campos/los-desafios-de-la-discriminacion-y-la-inclusion-en-mexico-jovenes-y-adultos-mayores">https://www.elfinanciero.com.mx/opinion/mauricio-de-maria-y-campos/los-desafios-de-la-discriminacion-y-la-inclusion-en-mexico-jovenes-y-adultos-mayores</a>
+              </li>
+              <br>
+              <li>
+                Cook, C., Goodman, N. & Schulz, L. (2011). Where science starts: Spontaneous experiments in preschoolers’ exploratory play. Cognition, 120 (2011), 341-349.
+              </li>
+              <br>
+              <li>
+                Soberanes, J. (2010). Igualdad, discriminación y tolerancia en México. Recuperado el 3 de julio de 2020 del Instituto de Investigaciones Jurídicas de la UNAM. Sitio web:
+                <a href="http://www.scielo.org.mx/pdf/cconst/n22/n22a9.pdf">http://www.scielo.org.mx/pdf/cconst/n22/n22a9.pdf</a>
+              </li>
+              <br>
+              <li>
+                Frías, L. (2019). La tolerancia, muy referida y poco practicada en México. Recuperado el 3 de julio de 2020 de la Gaceta UNAM. Sitio web:
+                <a href="https://www.gaceta.unam.mx/la-tolerancia-muy-referida-y-poco-practicada-en-mexico/">https://www.gaceta.unam.mx/la-tolerancia-muy-referida-y-poco-practicada-en-mexico/</a>
               </li>
               <br>
             </ul>
