--- a/proyecto-final-entrega-1/index.html
+++ b/proyecto-final-entrega-1/index.html
@@ -33,8 +33,8 @@
           </thead>
           <tbody>
             <tr>
-              <td>Carla</td>
-              <td></td>
+              <td>Carla <br>(<a href="https://www.carlyagu.myportfolio.com" target="_blank">Portafolio</a></td>
+              <td><img style="width:150px;height:300px;padding-left:10px": src="./FotoCarly.PNG" alt="Foto CArly"></td>
             </tr>
             <tr>
               <td style="padding-right:10px">Santiago Alcérreca De la Viña <br>(<a href="https://github.com/santiadlv" target="_blank">GitHub</a>)</td>
@@ -130,7 +130,7 @@
               </li>
               <br>
               <li>
-                <b>Where: (Carly)</b>
+                <b>Where: </b> Uno de los primeros lugares en los que el niño adquiere actitudes egocéntricas o intolerantes además de la escuela -como ya se mencionó-, es el hogar y durante las actividades familiares (Hernández, p.10). Debido a esto, es muy importante tener una herramienta móvil y accesible para los niños en todo sitio, con la que ellos, padres de familia, amigos, etc. puedan interactuar en conjunto en los lugares con mayor influencia en el comportamiento.
               </li>
               <br>
               <li>
@@ -210,6 +210,10 @@
               <li>
                 Frías, L. (2019). La tolerancia, muy referida y poco practicada en México. Recuperado el 3 de julio de 2020 de la Gaceta UNAM. Sitio web:
                 <a href="https://www.gaceta.unam.mx/la-tolerancia-muy-referida-y-poco-practicada-en-mexico/">https://www.gaceta.unam.mx/la-tolerancia-muy-referida-y-poco-practicada-en-mexico/</a>
+              </li>
+              <br>
+              <li>
+                Hernández, Ingrid (2004) Educar para la tolerancia: una labor en conjunto, Revista Mexicana de Ciencias Políticas y Sociales, vol. XLVII, núm. 191, pp. 136- 148.
               </li>
               <br>
             </ul>
