--- a/proyecto-final-entrega-1/index.html
+++ b/proyecto-final-entrega-1/index.html
@@ -23,8 +23,8 @@
         <hr>
         <br>
         <div class="row">
-          <div class="col-md-8 offset-md-4">
-            <table class="fixed">
+          <div class="col-md-6 offset-md-3">
+            <table class="table fixed">
           <thead>
             <tr>
               <th>Integrante</th>
@@ -33,16 +33,16 @@
           </thead>
           <tbody>
             <tr>
-              <td>Carla <br>(<a href="https://www.carlyagu.myportfolio.com" target="_blank">Portafolio</a></td>
-              <td><img style="width:150px;height:300px;padding-left:10px": src="./FotoCarly.PNG" alt="Foto CArly"></td>
+              <td class="align-middle">Carla <br>(<a href="https://www.carlyagu.myportfolio.com" target="_blank">Portafolio</a></td>
+              <td><img style="width:150px;height:150px;padding-left:10px" src="./FotoCarly.PNG" alt="Foto CArly"></td>
             </tr>
             <tr>
-              <td style="padding-right:10px">Santiago Alcérreca De la Viña <br>(<a href="https://github.com/santiadlv" target="_blank">GitHub</a>)</td>
-              <td><img style="width:150px;height:150px;padding-left:10px": src="./santi-photo.jpg" alt="Foto Santiago"></td>
+              <td class="align-middle" style="padding-right:10px">Santiago Alcérreca De la Viña <br>(<a href="https://github.com/santiadlv" target="_blank">GitHub</a>)</td>
+              <td><img style="width:150px;height:150px;padding-left:10px" src="./santi-photo.jpg" alt="Foto Santiago"></td>
             </tr>
             <tr>
-              <td>Aldo Turégano Montes <br>(<a href="https://www.linkedin.com/in/aldo-tur%C3%A9gano-montes-224952112/" target="_blank">LinkedIn</a> - <a href="https://github.com/AldoTu" target="_blank">GitHub</a>)</td>
-              <td><img alt="Foto Aldo"></td>
+              <td class="align-middle">Aldo Turégano Montes <br>(<a href="https://www.linkedin.com/in/aldo-tur%C3%A9gano-montes-224952112/" target="_blank">LinkedIn</a> - <a href="https://github.com/AldoTu" target="_blank">GitHub</a>)</td>
+              <td><img style="width:150px;height:150px;padding-left:10px" src="./foto-aldo.JPG" alt="Foto Aldo"></td>
             </tr>
           </tbody>
         </table>
@@ -58,11 +58,11 @@
         </div>
         <br>
         <div class="row">
-          <div class="col-md-4 offset-md-4">
-            <table class="fixed">
-              <col width="300px">
-              <col width="300px">
-              <col width="300px">
+          <div class="col-md-6 offset-md-3">
+            <table class="table table-hover fixed">
+              <col width="400px">
+              <col width="400px">
+              <col width="400px">
           <thead>
             <tr>
               <th>Carla</th>
@@ -89,6 +89,7 @@
             <tr>
               <td>Capacidad crítica</td>
               <td>Honestidad</td>
+              <td>Atención al Detalle</td>
             </tr>
           </tbody>
         </table>
