--- a/proyecto-final-entrega-1/index.html
+++ b/proyecto-final-entrega-1/index.html
@@ -33,7 +33,7 @@
           </thead>
           <tbody>
             <tr>
-              <td class="align-middle">Carla <br>(<a href="https://www.carlyagu.myportfolio.com" target="_blank">Portafolio</a></td>
+              <td class="align-middle">Carla Cristina Aguilar Aceves <br>(<a href="https://www.carlyagu.myportfolio.com" target="_blank">Portafolio</a></td>
               <td><img style="width:150px;height:150px;padding-left:10px" src="./FotoCarly.PNG" alt="Foto CArly"></td>
             </tr>
             <tr>
