--- a/persona/index.html
+++ b/persona/index.html
@@ -33,6 +33,8 @@
     <h1>Frustraciones:</h1>
     <p>La principal frustración de Stitch es que vive en una isla y él no sabe nadar por lo cual a veces le da ansiedad el vivir en una isla rodeado de agua como lo es Hawai.</p>
     <hr>
+    <h1>Tribu:</h1>
+    <p>Stitch al igual que muchos de sus hermanos (que también son experimentos) solo buscan una forma de poder adaptarse a la sociedad y brindar apoyo en lo que la gente necesita. Aunque a Stitch normalmente se le ve feliz y activo en películas y series, tiene ciertas inseguridades muy arraigadas lo cual a veces detonan en inncrementar su nivel de maldad.</p>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
