Proyecto Final-Segunda Entrega - First push

--- a/proyecto-final-entrega-2/index.html
+++ b/proyecto-final-entrega-2/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="col-md-6">
           <div class="text-center">
-            <img src="./assets/paco.PNG" width="150px" height="150px" alt="Paco">
+            <img src="./assets/paco.png" width="150px" height="150px" alt="Paco">
             <br>
             <br>
             <p class="text-justify">
@@ -76,7 +76,7 @@
         </div>
         <div class="col-md-6">
           <div class="text-center">
-            <img src="./assets/andrea.PNG" width="150px" height="150px" alt="Andrea">
+            <img src="./assets/andrea.png" width="150px" height="150px" alt="Andrea">
             <br>
             <br>
             <p class="text-justify">
