--- a/proyecto-final-entrega-2/index.html
+++ b/proyecto-final-entrega-2/index.html
@@ -27,7 +27,7 @@
           <tbody>
             <tr>
               <td>Carla Cristina Aguilar Aceves</td>
-              <td></td>
+              <td><img src="./assets/exploding-head.png" width="80px" height="80px" alt="Emoji Carly"></td>
             </tr>
             <tr>
               <td class="align-middle">Santiago Alcérreca De la Viña</td>
@@ -166,14 +166,14 @@
     <div class="row">
       <div class="col-md-5 offset-md-1">
         <p>Puede escuchar la entrevista con el primer usuario aquí:</p>
-        <audio controls src="#">
+        <audio controls src="./assets/MarthaListo.mp3">">
           <!--Que sea formato .MP3 para mayor compatibilidad-->
           Su navegador no es compatible con los elementos de tipo <code>audio</code>.
         </audio>
       </div>
       <div class="col-md-5">
         <p>Puede escuchar la entrevista con el segundo usuario aquí:</p>
-        <audio controls src="#">
+        <audio controls src="./assets/VanessaListo.mp3">
           <!--Que sea formato .MP3 para mayor compatibilidad-->
           Su navegador no es compatible con los elementos de tipo <code>audio</code>.
         </audio>
@@ -197,20 +197,24 @@
               <td>Justificación 1</td>
             </tr>
             <tr>
-              <td><i>Pregunta 2</i></td>
-              <td>Justificación 2</td>
+              <td><i>Como madre, ¿cuáles son las 3 cosas que más te molestan o tus mayores problemas respecto a la crianza?</i></td>
+              <td>Saber las necesidades de los usuarios que descargarán la aplicación y conocer mejor el mindset de las personas a cargo de la educación de niños </td>
             </tr>
             <tr>
-              <td><i>Pregunta 3</i></td>
-              <td>Justificación 3</td>
+              <td><i>¿Qué haces cuando tus hijos están aburridos o quieren entretenerse? / ¿Qué tan seguido juegan con una aplicación móvil?</i></td>
+              <td>Conocer la rutina o comportamiento de nuestros usuarios, tener insights para nuestro journey mapping e identificar oportunidad de introducción de nuestro producto en sus vidas</td>
             </tr>
             <tr>
-              <td><i>Pregunta 4</i></td>
-              <td>Justificación 4</td>
+              <td><i>¿Cuáles son los nombres de las 3 aplicaciones que más usan? /¿Por qué decidiste descargar esas apps?</i></td>
+              <td>Identificar a nuestra competencia y cúales son su "top of mind", también poder tomarlas como referencia y ver qué funciona o no en ellas para mejorar nuestro producto</td>
             </tr>
             <tr>
-              <td><i>Pregunta 5</i></td>
-              <td>Justificación 5</td>
+              <td><i>¿Sientes que estas aplicaciones ayuden a educar a los niños o solo a entretenerlos?</i></td>
+              <td>Saber el objetivo por el que los padres descargan las aplicaciones y qué tanto les interesa una que ofrezca ambos enfoques</td>
+            </tr>
+            <tr>
+              <td><i>¿Crees que el egocentrismo y la tolerancia sea un problema en los niños hoy en día?</i></td>
+              <td>Confirmar o rechazar el tema de nuestro enfoque, saber si la percepción de los padres es similar a la de nuestra investigación</td>
             </tr>
           </tbody>
         </table>
