Metodología de Usuarios

--- a/proyecto-final-entrega-2/index.html
+++ b/proyecto-final-entrega-2/index.html
@@ -289,9 +289,7 @@
         <img id="method-img" src="./assets/research-methodology.png" alt="">
       </div>
       <div id="method-text" class="col-md-6 text-justify">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan convallis nisi. Sed volutpat, orci tempor interdum iaculis, massa odio venenatis dui, non porta neque arcu nec dolor. In dignissim bibendum dui bibendum dignissim.
-          Duis tincidunt odio sed augue placerat sagittis. Suspendisse condimentum arcu massa, sit amet efficitur ante suscipit vitae. Ut pharetra nulla at ligula condimentum vestibulum. Nam viverra semper vestibulum. Integer blandit massa ut
-          tellus consectetur, ut rutrum nisl vulputate. Suspendisse suscipit a massa suscipit posuere. </p>
+        <p>Como metodología de observación con usuarios proponemos el uso de la plataforma <b>Proto.io</b> para generar los templates necesarios para explicar la funcionalidad y desarrollo del videojuego y así mismo poder tener la flexibilidad de compartir estas imágenes con diferentes usuarios para su validación. Confiamos que con esta herramienta, al ser desarrollada para poder obtener un prototipado de productos digitales, obtengamos toda la flexibilidad necesaria para efectuar los cambios necesarios en los templates derivados de los diferentes comentarios y feedback que esperamos recibir.</p>
       </div>
     </div>
   </div>
