--- a/proyecto-final-entrega-3/index.html
+++ b/proyecto-final-entrega-3/index.html
@@ -74,6 +74,7 @@
       <hr>
       <br>
       <h1 style="color:red;">Steven Spielberg</h1>
+      <video src="https://www.youtube.com/watch?v=wmiIUN-7qhE" autoplay poster="posterimage.jpg"></video>
     </div>
   </div>
   <!-- Optional JavaScript -->
