--- a/proyecto-final-entrega-3/index.html
+++ b/proyecto-final-entrega-3/index.html
@@ -75,6 +75,7 @@
       <br>
       <h1 style="color:red;">Steven Spielberg</h1>
       <video src="https://www.youtube.com/watch?v=wmiIUN-7qhE" autoplay poster="posterimage.jpg"></video>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3922416.9548325245!2d-94.49905025180786!3d16.24687901107649!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x858d44b49757ce67%3A0xcf0033824619d615!2sChiapas!5e0!3m2!1ses!2smx!4v1595025451375!5m2!1ses!2smx" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
   </div>
   <!-- Optional JavaScript -->
