--- a/proyecto-final-entrega-3/index.html
+++ b/proyecto-final-entrega-3/index.html
@@ -28,7 +28,7 @@
           <tbody>
             <tr>
               <td>Carla Cristina Aguilar Aceves</td>
-              <td><img src="./assets/exploding-head.png" width="80px" height="80px" alt="Emoji Carly"></td>
+              <td><img src="./assets/meme-carly.jpg" width="80px" height="80px" alt="Emoji Carly"></td>
             </tr>
             <tr>
               <td class="align-middle">Santiago Alcérreca De la Viña</td>
@@ -48,8 +48,9 @@
       <hr>
       <h2>Solución de la Problemática:</h2>
       <br>
-      <p class="text-justify">La solución que encontramos a la problemática estipulada en las entregas 1 y 2 es inclucar los valores de tolerancia, diversidad e inclusión por medio de un videojuego usando distintos personajes animados llamados
-        <b>"Pelifrutis"</b>. Con esta solución buscamos tener un alto alcance a los niños mexicanos de entre 2 yy 4 años y confiamos en tener el apoyo y confianza de los padres de familia.</p>
+      <p class="text-justify">La solución que encontramos a la problemática estipulada en las entregas 1 y 2 es inculcar los valores de tolerancia, diversidad e inclusión por medio de un videojuego usando distintos personajes animados llamados
+        <b>"Pelifrutis"</b>. Con esta solución buscamos tener un alto alcance a los niños mexicanos de entre 4 y 8 años y confiamos en tener el apoyo y confianza de los padres de familia.</p>
+      <p> OBJETIVOS: Estimular el trabajo en equipo, reconocimiento y aceptación de las diferencias, tolerancia a la frustración, igualdad y deconstrucción de estereotipos a través de las historias d elos juegos y los personajes.</p>
       <hr>
       <h2>Escenarios:</h2>
       <ul>
@@ -66,8 +67,10 @@
       <hr>
       <h2>Wireframes:</h2>
       <br>
+      <img src="./assets/wireframes.png">
       <hr>
       <h2>Prototipo:</h2>
+      <img src="./assets/pract3.png">
       <br>
       <hr>
       <h2>Pregunta:</h2>
