Media modification attempt to fix loading errors

--- a/proyecto-final-entrega-3/index.html
+++ b/proyecto-final-entrega-3/index.html
@@ -102,12 +102,12 @@
       <hr>
       <h2>Wireframes:</h2>
       <br>
-      <img class="img-center" src="./assets/wireframe.png">
+      <img class="img-center" src="./assets/wireframes.png">
       <br><br>
       <hr>
       <h2>Prototipo:</h2>
       <br>
-      <img class="img-center" src="./assets/pract3.png">
+      <img class="img-center" src="./assets/prototypes.png">
       <br><br>
       <hr>
       <br>
